--- a/modules/server/src/main/resources/vm/system/cache.vm
+++ b/modules/server/src/main/resources/vm/system/cache.vm
@@ -19,53 +19,44 @@
 
 <body>
 
-<blockquote class="layui-elem-quote">服务端文件缓存：$!cacheFileSize
-    <button type="button" class="layui-btn layui-btn-sm clear" t="serviceCacheFileSize">清空</button>
-</blockquote>
+    #if(!$node)
+    <blockquote class="layui-elem-quote">服务端文件缓存：$!cacheFileSize
+        <button type="button" class="layui-btn layui-btn-sm clear" t="serviceCacheFileSize">清空</button>
+    </blockquote>
 
-<blockquote class="layui-elem-quote">黑名单IP数量：$!ipSize
-    <button type="button" class="layui-btn layui-btn-sm clear" t="serviceIpSize">清空</button>
-</blockquote>
-
-<div class="layui-collapse" style="margin: 10px;">
-    #foreach($item in $nodeModels)
-        <div class="layui-colla-item">
-            <div class="layui-colla-title">
-                $item.name
-            </div>
-            <div class="layui-colla-content layui-show">
-                <blockquote class="layui-elem-quote">文件缓存：
-                    <span nodeId="$item.id" fileSize> </span>
-                    <button type="button" class="layui-btn layui-btn-sm clear" style="display: none" nodeId="$item.id"
-                            t="fileSize">清空
-                    </button>
-                </blockquote>
-                <blockquote class="layui-elem-quote">进程名缓存：
-                    <span nodeId="$item.id" pidName></span>
-                    <button type="button" class="layui-btn layui-btn-sm clear" style="display: none" nodeId="$item.id"
-                            t="pidName">清空
-                    </button>
-                </blockquote>
-                <blockquote class="layui-elem-quote">进程端口缓存：
-                    <span nodeId="$item.id" pidPort></span>
-                    <button type="button" class="layui-btn layui-btn-sm clear" style="display: none" nodeId="$item.id"
-                            t="pidPort">清空
-                    </button>
-                </blockquote>
-            </div>
-        </div>
+    <blockquote class="layui-elem-quote">黑名单IP数量：$!ipSize
+        <button type="button" class="layui-btn layui-btn-sm clear" t="serviceIpSize">清空</button>
+    </blockquote>
+    #else
+    <blockquote class="layui-elem-quote">文件缓存：
+        <span nodeId="$node.id" fileSize> </span>
+        <button type="button" class="layui-btn layui-btn-sm clear" style="display: none" nodeId="$node.id"
+                t="fileSize">清空
+        </button>
+    </blockquote>
+    <blockquote class="layui-elem-quote">进程名缓存：
+        <span nodeId="$node.id" pidName></span>
+        <button type="button" class="layui-btn layui-btn-sm clear" style="display: none" nodeId="$node.id"
+                t="pidName">清空
+        </button>
+    </blockquote>
+    <blockquote class="layui-elem-quote">进程端口缓存：
+        <span nodeId="$node.id" pidPort></span>
+        <button type="button" class="layui-btn layui-btn-sm clear" style="display: none" nodeId="$node.id"
+                t="pidPort">清空
+        </button>
+    </blockquote>
     #end
-</div>
+
 </body>
 <script>
     function loadSuccess() {
         #if($user.isSystemUser())
             $(".clear").show();
         #end
-        #foreach($item in $nodeModels)
-            getCache("$item.id");
+        #if($node)
+            getCache("$!node.id");
         #end
-
     }
 
     function getCache(nodeId) {
